200-mosquitto/40-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mosquitto
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: mosquitto.int.volfoni.org
    http:
      paths:
      - path: /
        backend:
          serviceName: mosquitto
          servicePort: 80
